--- a/public/rock.html
+++ b/public/rock.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <div><a href="/rock">Play Rock</a></div>
 <div><a href="/paper">Play Paper</a></div>
 <div></div><a href="/scissors">Play Scissors</a></div>
