--- a/public/rock.html
+++ b/public/rock.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+<head>
+  <title>You played rock!</title>
+  <meta charset="utf-8">
+  </head>
 <div><a href="/rock">Play Rock</a></div>
 <div><a href="/paper">Play Paper</a></div>
-<div></div><a href="/scissors">Play Scissors</a></div>
+<div><a href="/scissors">Play Scissors</a></div>
 
 <h2>We played rock!</h2>
 
@@ -9,4 +13,4 @@
 
 <h2>We lost!</h2>
 
-<div><a href="/rules">Rules</a></div>
+<div><a href="/">Rules</a></div>
