Latest versions with home page

--- a/public/rock.html
+++ b/public/rock.html
@@ -2,15 +2,11 @@
 <head>
   <title>You played rock!</title>
   <meta charset="utf-8">
-  </head>
+</head>
 <div><a href="/rock">Play Rock</a></div>
 <div><a href="/paper">Play Paper</a></div>
 <div><a href="/scissors">Play Scissors</a></div>
 
-<h2>We played rock!</h2>
+<h1>Welcome to Rock-Paper-Scissors!</h1>
 
-<h2>They played paper!</h2>
-
-<h2>We lost!</h2>
-
-<div><a href="/">Rules</a></div>
+<div>From <a href="https://en.wikipedia.org/wiki/Rock_paper_scissors">Wikipedia</a></div>
