--- a/public/home.html
+++ b/public/home.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <head>
-  <title>You played scissors!</title>
+  <title>Rock-Paper-Scissors Rules</title>
   <meta charset="utf-8">
 </head>
+
 <div><a href="/rock">Play Rock</a></div>
 <div><a href="/paper">Play Paper</a></div>
 <div><a href="/scissors">Play Scissors</a></div>
 
-<h2>We played scissors!</h2>
-
-<h2>They played paper!</h2>
-
-<h2>We won!</h2>
-
-<div><a href="/">Rules</a></div>
