Latest versions with home page

--- a/public/home.html
+++ b/public/home.html
@@ -8,3 +8,6 @@
 <div><a href="/paper">Play Paper</a></div>
 <div><a href="/scissors">Play Scissors</a></div>
 
+<h1>Welcome to Rock-Paper-Scissors!</h1>
+
+<div>From <a href="https://en.wikipedia.org/wiki/Rock_paper_scissors">Wikipedia</a></div>
