--- a/public/rock.html
+++ b/public/rock.html
@@ -7,6 +7,10 @@
 <div><a href="/paper">Play Paper</a></div>
 <div><a href="/scissors">Play Scissors</a></div>
 
-<h1>Welcome to Rock-Paper-Scissors!</h1>
+<h2>We played Rock!</h2>
 
-<div>From <a href="https://en.wikipedia.org/wiki/Rock_paper_scissors">Wikipedia</a></div>
+<h2>They played paper!</h2>
+
+<h2>We lost!</h2>
+
+<div><a href="/">Rules</a></div>
