--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
 <h1>Welcome to Rock-Paper-Scissors!</h1>
 
-<p><a href="https://en.wikipedia.org/wiki/Rock_paper_scissors" target="_blank">From Wikipedia</a></p>
+<p>From <a href="https://en.wikipedia.org/wiki/Rock_paper_scissors" target="_blank">Wikipedia</a>:</p>
 
 <p>Rock-paper-scissors (also known as paper, scissors, stone or other variants) is a hand game usually played between two people, in which each player simultaneously forms one of three shapes with an outstretched hand.</p>
 
@@ -22,6 +22,9 @@
 </ul>
 
 <p>A player who decides to play rock will beat another player who has chosen scissors ("rock crushes scissors" or sometimes "blunts scissors"), but will lose to one who has played paper ("paper covers rock"); a play of paper will lose to a play of scissors ("scissors cut[s] paper"). If both players choose the same shape, the game is tied and is usually immediately replayed to break the tie.</p>
+
+<table></table>
+
 <p></p>
 <p></p>
 <p></p>
