Latest version included <html><head><body>

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>Rock-Paper-Scissors Rules</title>
   <meta charset="utf-8">
 </head>
+<body>
+
 <div><a href="/rock">Play Rock</a></div>
 <div><a href="/paper">Play Paper</a></div>
 <div><a href="/scissors">Play Scissors</a></div>
@@ -31,3 +34,6 @@
 <p></p>
 
 
+</body>
+
+</html>
