--- a/public/rock.html
+++ b/public/rock.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>You played rock!</title>
   <meta charset="utf-8">
 </head>
+<body>
 <div><a href="/rock">Play Rock</a></div>
 <div><a href="/paper">Play Paper</a></div>
 <div><a href="/scissors">Play Scissors</a></div>
@@ -14,3 +16,7 @@
 <h2>We lost!</h2>
 
 <div><a href="/">Rules</a></div>
+
+</body>
+
+</html>
