--- a/public/scissors.html
+++ b/public/scissors.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>You played scissors!</title>
   <meta charset="utf-8">
 </head>
+<body>
+
 <div><a href="/rock">Play Rock</a></div>
 <div><a href="/paper">Play Paper</a></div>
 <div><a href="/scissors">Play Scissors</a></div>
@@ -14,3 +17,7 @@
 <h2>We won!</h2>
 
 <div><a href="/">Rules</a></div>
+
+</body>
+
+</html>
